--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,6 +125,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -157,7 +158,7 @@ CurrentPosGridSize=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
 Grid_C=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
 SplineComponent=PropertyWrapper.DefaultValueCategory.slots
@@ -203,7 +204,7 @@ MyPlayerCharacter_C=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGe
 BattleMap_C=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
 InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/TopDown/Input/Actions/IA_SetDestination_Touch.IA_SetDestination_Touch,InputMappingContext.Mappings.ActionMappings./Game/TopDown/Input/Actions/IA_SetDestination_Click.IA_SetDestination_Click
-BP_MainPawnCamera_C=
+BP_MainPawnCamera_C=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
 K2Node=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
 BP_BigTopDownCharacter_C=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
@@ -212,12 +213,16 @@ BrushComponent=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.Def
 MoveCamera=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
 MoveCamera_4=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
 BP_Big2_C=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
+BP_TopDownGameMode_C=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
+GameNetworkManager=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
+GameSession=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
+BP_Big3_C=PropertyWrapper.DefaultValueCategory.slots,K2Node_VariableGet.DefaultValueCategory.slots
 
 [EditorStartup]
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [ModuleFileTracking]
-MyProject.TimeStamp=2024.01.16-01.46.17
+MyProject.TimeStamp=2024.01.16-09.23.51
 MyProject.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.10.18-10.23.41
 StorageServerClient.LastCompileMethod=Unknown
@@ -1247,6 +1252,12 @@ SkeletonEditor.TimeStamp=2023.10.18-10.23.39
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2023.10.18-10.23.36
 PinnedCommandList.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2023.10.18-10.23.35
+LauncherServices.LastCompileMethod=Unknown
+TurnkeyIO.TimeStamp=2023.10.18-10.23.41
+TurnkeyIO.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2023.10.18-10.23.41
+UATHelper.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -1406,7 +1417,7 @@ Enum="\"Object\" "
 Field="\"Object\" "
 PrimaryAssetLabel="\"Object\" "
 PrimaryDataAsset="\"Object\" "
-DataAsset="\"Object\" \"Object.AvailableMovesStruct.SmallAvailableMoves\" "
+DataAsset="\"Object\" \"Object.MapLegend.MapObjects\" \"Object.MapLegend.MapObjects.MapObjects[0]\" \"Object.MapLegend.MapObjects.MapObjects[1]\" \"Object.MapLegend.MapObjects.MapObjects[2]\" \"Object.MapLegend.MapObjects.MapObjects[3]\" \"Object.MapLegend.MapObjects.MapObjects[4]\" \"Object.MapLegend.MapObjects.MapObjects[5]\" "
 DataTable="\"Object\" "
 Actor="\"Object\" "
 LandscapeLayerInfoObject="\"Object\" "
@@ -1475,9 +1486,9 @@ SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
 SkeletalMeshActor="\"Object.SkeletalMeshActor.SkeletalMeshComponent.Object.Collision.BodyInstance\" "
-BP_TopDownController_C="\"Object.Controller.Controller|Transform\" "
-PlayerController="\"Object.Controller.Controller|Transform\" "
-Controller="\"Object.Controller.Controller|Transform\" "
+BP_TopDownController_C=
+PlayerController=
+Controller=
 K2Node_InputKey="\"Object\" "
 K2Node_GetInputAxisKeyValue="\"Object\" "
 K2Node_CallFunction="\"Object\" "
@@ -1491,7 +1502,18 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 SphereComponent="\"Object\" "
-NewBlueprint_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+NewBlueprint_C=
+MaterialExpressionSaturate="\"Object\" "
+Image="\"Object\" \"Object.Appearance.Brush\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+WBP_BuildingHUD_C="\"Object\" "
+UserWidget="\"Object\" "
+EditableTextBox="\"Object\" "
+TextBlock="\"Object\" "
+TextLayoutWidget="\"Object\" "
+ScrollBox="\"Object\" "
+PanelWidget="\"Object\" "
 
 [DetailCategories]
 WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
@@ -2804,13 +2826,101 @@ BP_Big3_C.WorldPartition=True
 BP_Big3_C.Events=True
 BP_Big3_C.TransformCommon=True
 BP_Big3_C.Networking=True
+BP_TopDownCharacter_C.Default=True
+BP_TopDownController_C.TransformCommon=True
+BP_TopDownController_C.Networking=True
+GameNetworkManager.TransformCommon=True
+GameNetworkManager.Replication=True
+GameNetworkManager.Physics=True
+GameNetworkManager.Networking=True
+GameNetworkManager.Actor=True
+GameSession.TransformCommon=True
+GameSession.Replication=True
+GameSession.Physics=True
+GameSession.Networking=True
+GameSession.Actor=True
+BP_TopDownGameMode_C.TransformCommon=True
+BP_TopDownGameMode_C.Networking=True
+MaterialExpressionSaturate.MaterialExpression=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+TopDownMap_C.Tick=True
+TopDownMap_C.Replication=True
+TopDownMap_C.Actor=True
+TopDownMap_C.Input=True
+TopDownMap_C.HLOD=True
+TopDownMap_C.Physics=True
+TopDownMap_C.WorldPartition=True
+TopDownMap_C.Events=True
+WBP_BuildingHUD_C.Appearance=True
+WBP_BuildingHUD_C.Input=True
+WBP_BuildingHUD_C.Interaction=True
+WBP_BuildingHUD_C.Designer=True
+WBP_BuildingHUD_C.Performance=True
+WBP_BuildingHUD_C.Layout=True
+WBP_BuildingHUD_C.Behavior=True
+WBP_BuildingHUD_C.Render Transform=True
+WBP_BuildingHUD_C.Localization=True
+WBP_BuildingHUD_C.Accessibility=True
+WBP_BuildingHUD_C.Clipping=True
+WBP_BuildingHUD_C.Navigation=True
+map_village_day_C.Tick=True
+map_village_day_C.Replication=True
+map_village_day_C.Actor=True
+map_village_day_C.Input=True
+map_village_day_C.HLOD=True
+map_village_day_C.Physics=True
+map_village_day_C.WorldPartition=True
+map_village_day_C.Events=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Appearance=True
+EditableTextBox.Accessibility=True
+EditableTextBox.Behavior=True
+EditableTextBox.Clipping=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Performance=True
+EditableTextBox.Navigation=True
+EditableTextBox.Localization=True
+EditableTextBox.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+ScrollBox.Layout=True
+ScrollBox.Style=True
+ScrollBox.Scroll=True
+ScrollBox.Accessibility=True
+ScrollBox.Behavior=True
+ScrollBox.Render Transform=True
+ScrollBox.Performance=True
+ScrollBox.Clipping=True
+ScrollBox.Navigation=True
+ScrollBox.Localization=True
+ScrollBox.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDown/Maps/TopDownMap.TopDownMap:PersistentLevel.TopDownMap
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=480.000 Y=169.000
+WindowSize=X=1274.000 Y=720.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2827,7 +2937,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/Projects/MyProject/Content/
+UNR=D:/Projects/MyProject/Content/TopDown/Maps
 BRUSH=D:/Projects/MyProject/Content/
 FBX=D:/Projects/MyProject/Content/
 FBXAnim=D:/Projects/MyProject/Content/
@@ -2845,8 +2955,8 @@ LastDirectory=
 RecentsFiles=F:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/Fantastic_Village_Pack/maps/map_village_day
-MRUItem1=/Game/TopDown/Maps/TopDownMap
+MRUItem0=/Game/TopDown/Maps/TopDownMap
+MRUItem1=/Game/Fantastic_Village_Pack/maps/map_village_day
 MRUItem2=/Game/GhostyAngel/Maps/DemoMap
 MRUItem3=/Game/TurnBasedRPGTemplate/Map/Gameplay
 
@@ -2856,25 +2966,25 @@ bFindPathEnabled=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/TopDown/Blueprints/BP_Big3
-MRUItem1=/Game/TopDown/Data/DA_BigCharacter3
-MRUItem2=/Game/TopDown/Data/DA_SmallCharacter
-MRUItem3=/Game/TopDown/Blueprints/BP_Big2
-MRUItem4=/Game/TopDown/Data/DA_BigCharacter2
-MRUItem5=/Game/TopDown/Data/DA_BigCharacter
-MRUItem6=/Game/TopDown/Blueprints/BP_BigTopDownCharacter
-MRUItem7=/Game/Grid/Data/Types/AvailablesAssets
-MRUItem8=/Game/TopDown/Blueprints/BP_MainPawnCamera
-MRUItem9=/Game/TopDown/Blueprints/NewBlueprint
-MRUItem10=/Game/GhostyAngel/Meshes/Characters/SK_GhostyAngel_T_pose
-MRUItem11=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem12=/Game/TopDown/Input/IMC_Default
-MRUItem13=/Game/TopDown/Input/Actions/IA_ScrollMouseWheel
-MRUItem14=/Game/TopDown/Input/Actions/IA_W
-MRUItem15=/Game/TopDown/Input/IMC_CameraControl
-MRUItem16=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem17=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem18=/Game/Grid/Data/Maps/Map2
-MRUItem19=/Game/GhostyAngel/Meshes/Characters/SK_Bow-knot
+MRUItem1=/Game/WBP_ConsoleWidget
+MRUItem2=/Game/Grid/Blueprints/BattleMap
+MRUItem3=/Game/Fantastic_Village_Pack/maps/map_village_day
+MRUItem4=/Game/TopDown/Blueprints/BP_MainPawnCamera
+MRUItem5=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem6=/Game/UI/Building/WBP_BuildingHUD
+MRUItem7=/Game/Grid/Materials/GrassMaterial
+MRUItem8=/Game/Grid/Materials/GrassMaterial_Inst
+MRUItem9=/Game/Fantastic_Village_Pack/materials/master_materials/M_Master_water
+MRUItem10=/Game/Fantastic_Village_Pack/materials/MI_ENV_water
+MRUItem11=/Game/Grid/Data/Types/AvailablesAssets
+MRUItem12=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem13=/Game/Building/NewBlueprint
+MRUItem14=/Game/TopDown/Data/DA_BigCharacter3
+MRUItem15=/Game/TopDown/Data/DA_SmallCharacter
+MRUItem16=/Game/TopDown/Blueprints/BP_Big2
+MRUItem17=/Game/TopDown/Data/DA_BigCharacter2
+MRUItem18=/Game/TopDown/Data/DA_BigCharacter
+MRUItem19=/Game/TopDown/Blueprints/BP_BigTopDownCharacter
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2889,7 +2999,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/TopDown/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Building
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3013,8 +3123,12 @@ SequenceBrowser.HiddenColumns=Class
 /Game/TopDown/Blueprints/NewBlueprint.NewBlueprint=0
 /Game/TopDown/Blueprints/BP_Big2.BP_Big2=0
 /Game/TopDown/Data/DA_BigCharacter2.DA_BigCharacter2=0
-/Game/TopDown/Blueprints/BP_Big3.BP_Big3=1
+/Game/TopDown/Blueprints/BP_Big3.BP_Big3=0
 /Game/TopDown/Data/DA_BigCharacter3.DA_BigCharacter3=1
+/Game/UI/Building/WBP_BuildingHUD.WBP_BuildingHUD=0
+/Game/TopDown/Maps/TopDownMap.TopDownMap:PersistentLevel.TopDownMap=0
+/Game/Fantastic_Village_Pack/maps/map_village_day.map_village_day:PersistentLevel.map_village_day=0
+/Game/WBP_ConsoleWidget.WBP_ConsoleWidget=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3098,10 +3212,12 @@ HierarchicalInstancedStaticMeshComponent.Collision=True
 StaticMeshActor.StaticMesh=False
 InputSettings.Bindings=False
 CapsuleComponent.Shape=False
+BP_BigTopDownCharacter_C.Actor=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
@@ -3155,7 +3271,7 @@ PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 ColorViewMode=Normal
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
@@ -3318,7 +3434,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialEditor]
-PrimType=2
+PrimType=1
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -3396,4 +3512,98 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 
 [MessageLog]
 LastLogListing=BlueprintLog
+
+[UMGEditor.Designer]
+bCommonResolutionSelected=False
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
+
+[WidgetTemplatesExpanded]
+Common=False
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+Uncategorized=False
+User Created=False
+Advanced=False
 
